style.css
/* general */

@font-face {
  font-family: "norse-bold";
  src:
    url("./fonts/norse-bold-webfont.woff2") format("woff2"),
    url("./fonts/norse-bold-webfont.woff") format("woff");
  font-weight: bold;
  font-style: normal;
}

:root {
  --font-size-sm: 0.75rem;
  --plant-green: #596D48;
  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

h1 {
  font-size: 5.5rem;
  font-family: "norse-bold", fantasy;
}

h3 {
  font-weight: 500;
  font-size: 1.3rem;
  max-width: 55ch;
}

button,
input,
select {
  appearance: none;
  font-family: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
}

body {
  display: flex;
  height: 100vh;
}

/* hero sidebar */

#hero {
  background-color:var(--plant-green);
  background-image: url("./img/hero-bg.jpg");
  background-position: center;
  background-size: cover;
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;
  width: 38%;
  position: relative;
}

#banner {
  background: rgba(0, 0, 0, 0.4);
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
  height: 8.5rem;
  width: 100%;
}

#banner img {
  height: 85%;
}

#hero p {
  position: absolute;
  bottom: 10px;
  right: 10px;
  font-size: var(--font-size-sm);
}

#hero p a {
  color: white;
}

#hero p a:hover {
  text-decoration: none;
}

/* main content */

#content {
  background-color: #fafafa;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 62%;
}

#content > * {
  padding: 2rem 3rem;
}

#content h3:not(:last-child),
div button:first-child {
  margin-bottom: 1.4rem;
}

/* form */

#input {
  background-color: white;
  box-shadow: 0 3px 12px lightgray;
}

#signup-form {
  display: flex;
  flex-wrap: wrap;
  gap: 1.25rem;
}

.form-row {
  margin-right: 2rem;
}

.form-row label {
  display: block;
  font-size: var(--font-size-sm);
  letter-spacing: 0.1rem;
  margin-bottom: 0.25rem;
  text-transform: uppercase;
}

.form-row input {
  height: 1.7rem;
}

#submit button,
.form-row input {
  width: 14rem;
}

#submit button {
  background-color: var(--plant-green);
  border: 0;
  border-radius: 8px;
  color: white;
  font-weight: 600;
  height: 2.7rem;
}

#submit button:hover {
  filter: brightness(90%);
  cursor: pointer;
}

#submit button:active {
  filter: brightness(80%);
}

#submit a {
  color: var(--plant-green);
  font-weight: 600;
  text-decoration: none;
}

#submit a:hover {
  text-decoration: underline;
}

